<resources>
    <string name="app_name">Habit Maker</string>
    <string name="welcome">Welcome to Habit Maker!</string>
    <string name="nav_explain">Use the buttons below to navigate to different pages</string>
    <string name="tasks_nav_str">Tasks</string>
    <string name="calendar_nav_str">Calendar</string>
    <string name="task_creation_nav_str">Task Creation</string>
    <string name="stats_nav_str">Statistics</string>
    <string name="enter_task_name">Task name:</string>
    <string name="tasks_info_nav_str">Task Details</string>
    <string name="create_new_task_str">CREATE NEW TASK</string>
    <string name="enter_task_interval">Task interval:</string>
    <string name="enter_task_day">Task day:</string>
    <string name="enter_task_time">Task time:</string>
    <string-array name="intervals">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="time_button">SELECT TASK TIME</string>
    <string name="day_button">SELECT TASK DAY</string>
    <string name="toggle_text">Toggle task complete/incomplete</string>
    <string name="edit_task_button">Edit Task Details</string>
    <string name="delete_task_button">Delete Task</string>
    <string name="task_complete">Task is complete</string>
    <string name="task_incomplete">Task is incomplete</string>
</resources>